# adversarial-insight-ml

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: sphinx.yml
automatic_test_and_evaluation/: evaluate.py
black_box_attack/: black_box_test.py
docs/: .buildinfo  aiml.attack.html  aiml.evaluation.html  aiml.html  aiml.load_data.html  aiml.surrogate_model.html  conf.py  genindex.html  index.html  index.rst  modules.html  modules.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/doctrees/: aiml.attack.doctree  aiml.doctree  aiml.evaluation.doctree  aiml.load_data.doctree  aiml.surrogate_model.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  aiml.attack.html  aiml.evaluation.html  aiml.html  aiml.load_data.html  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/aiml/: test_c.html  test_cifar.html
docs/_sources/: aiml.attack.rst.txt  aiml.rst.txt
examples/: cnn_mnist.tar.xz  demo_basic.ipynb  demo_beginner.ipynb  demo_huggingface.ipynb  demo_model.pth  demo_robustbench.ipynb  resnet18_cifar10.tar.xz
load_data/: load_test_set.py
sphinx/: aiml.attack.rst  aiml.evaluation.rst  aiml.load_data.rst  aiml.rst  aiml.surrogate_model.rst  conf.py  index.rst  modules.rst
sphinx/_build/doctrees/: aiml.attack.doctree  aiml.doctree  aiml.evaluation.doctree  aiml.load_data.doctree  aiml.surrogate_model.doctree  environment.pickle  index.doctree  modules.doctree
sphinx/_build/html/: .buildinfo
src/adversarial_insight_ml/: __init__.py
src/aiml/: __init__.py  create_surrogate_model.py  evaluate.py  get_accuracy_results.py  test_c.py  user_functions.py
src/aiml/attack/: __init__.py  adversarial_attacks.py  attack_evaluation.py  test_attack.py  test_black_box.py  test_white_box.py
src/aiml/attacks/: test_black_box.py  test_white_box.py
src/aiml/black_box_attack/: black_box_test.py  test_black_box.py
standard_white_box_attack/: Adversarial_Patch.py  Carlini_L0_Method.py  Carlini_L2_Method.py  Carlini_LInf_Method.py  Deep_Fool.py  Elastic_Net.py  Frame_Saliency_Attack.py  get_started_pytorch.py
test_accuracy/: test_accuracy.py
test_all_white_box_attack/: test_all_white_box_attack.py
tests/: test.py  test_attack.py  test_evaluation.py  test_load_data.py  test_load_model.py  test_surrogate_model.py
user_called_function/: user_called_function_1.py
(+54 files in other folders)
